# diamm

./: .gitignore  DEPLOYMENT.txt  Pipfile  README.md  diamm_daily.sh  gunicorn_start.sh  manage.py  pyproject.toml  requirements-old.txt  requirements.txt
diamm/: auth_local.py.template  authentication.py  router.py  settings.py  settings_local.py  settings_local.py.template  urls.py  wsgi.py
diamm/admin/: __init__.py  diamm_token.py  diamm_user.py  merge_models.py  multidb_admin.py
diamm/admin/data/: archive.py  archive_identifier.py  archive_note.py  bibliography.py  bibliography_author.py  bibliography_type.py  clef.py  composition.py  composition_bibliography.py  cycle.py  cycle_type.py  genre.py  geographic_area.py  image.py  image_type.py  item.py  item_bibliography.py  item_note.py  language.py  mensuration.py  notation.py  organization.py  organization_identifier.py  organization_subtype.py  organization_type.py  page.py  page_note.py  person.py  person_identifier.py  person_note.py  person_role.py  role.py  set.py  source.py  source_authority.py  source_bibliography.py  source_catalogue_entry.py  source_copyist.py  source_manifest.py  source_note.py  (+7 more)
diamm/admin/filters/: input_filter.py
diamm/admin/forms/: assign_genre.py  copy_inventory.py  create_pages_and_images.py  merge_areas.py  merge_compositions.py  merge_organizations.py  merge_people.py  update_organization_type.py
diamm/admin/helpers/: optimized_raw_id.py
diamm/admin/site/: aboutpages.py  commentary.py  contribution.py  cover_image.py  problem_report.py  project_sources.py  story.py  tag.py
diamm/diamm_data/: __init__.py  apps.py
diamm/diamm_data/migrations/: 0001_initial.py  0001_squashed_0034_compositionnote.py  0002_auto_20161215_1737.py  0002_auto_20180312_2337.py  0003_auto_20161216_0840.py  0003_auto_20180423_1802.py  0004_auto_20200606_1632.py  0004_sourcenote_sort.py  0005_alter_compositionnote_type.py  0005_item_item_title.py  0006_auto_20221014_1312.py  0006_item_legacy_composition.py  0007_archive_former_sigla.py  0007_auto_20161223_1145.py  0008_auto_20161223_1545.py  0008_auto_20230425_1224.py  0009_auto_20161226_2039.py  0009_auto_20230426_1300.py  0010_archiveidentifier.py  0010_auto_20170123_1608.py  0011_auto_20170218_1619.py  0011_auto_20230626_1205.py  0012_alter_sourceauthority_options.py  0012_auto_20170318_0753.py  0013_auto_20170323_0724.py  0013_person_floruit.py  0014_auto_20170325_1553.py  0014_image_external_page_external_page_iiif_canvas_uri_and_more.py  0015_alter_imagetype_options_image_height_image_width_and_more.py  0015_auto_20170325_1716.py  0016_auto_20170326_1355.py  0016_natsort.py  0017_alter_image_height_alter_image_width.py  0017_auto_20170425_1722.py  0018_alter_image_location.py  0018_auto_20170527_1613.py  0018_auto_20170609_1632.py  0019_auto_20170527_1621.py  0019_auto_20170623_2305.py  0019_remove_image_iiif_response_cache.py  (+45 more)
diamm/diamm_data/models/: __init__.py
diamm/diamm_migrate/: __init__.py  apps.py
diamm/diamm_site/: __init__.py  apps.py
diamm/diamm_site/migrations/: 0001_initial.py  0001_squashed_0027_auto_20170803_1920.py  0002_commentary_contentpage_homepage_newsindexpage_newspage_problemreport.py  0003_auto_20161216_0723.py  0004_contentpage_cover_image.py  0005_publicationpage.py  0006_auto_20161218_1704.py  0007_publicationpage_purchase_link.py  0008_contentpage_tmpl.py  0009_auto_20161218_2149.py  0010_auto_20161220_1646.py  0011_dissertationpage.py  0012_auto_20161220_1719.py  0013_auto_20161220_1724.py  0014_remove_dissertationpage_author.py  0015_auto_20170119_0958.py  0016_auto_20170119_1245.py  0017_auto_20170123_1608.py  0018_homepage_publications_intro.py  0019_publicationpage_show_on_front.py  0031_diammtoken.py  (+19 more)
diamm/fixtures/: image_file_types.json  image_page_conditions.json  organization_types.json  page_conditions.json
diamm/forms/: account_edit_form.py  change_password_form.py  contribution_form.py  create_account_form.py  login_form.py  reset_password_form.py
diamm/helpers/: formatters.py  identifiers.py  object_pagination.py  solr_helpers.py  solr_iiif_manifest.py  solr_pagination.py  storage.py
diamm/middleware/: logging.py
diamm/models/: __init__.py  diamm_token.py  diamm_user.py
diamm/renderers/: html_renderer.py  single_page_renderer.py  ujson_renderer.py
diamm/serializers/: fields.py  serializers.py
diamm/signals/: __init__.py  archive_signals.py  bibliography_signals.py  composition_signals.py  geographic_area_signals.py  item_signals.py  organization_signals.py  page_signals.py  person_signals.py  problem_report_signals.py  set_signals.py  source_copyist_signals.py  source_provenance_signals.py  source_relationship_signals.py  source_signals.py
diamm/sitemaps/: archive_sitemap.py  source_sitemap.py  static_sitemap.py
diamm/templates/: 400.html  400.jinja2  403.html  403.jinja2  404.html  404.jinja2  500.jinja2  aboutpages_detail.jinja2  aboutpages_menu.jinja2  base.html  base.jinja2  beta.jinja2  flatpage_menu.jinja2  index.html  index.jinja2  introduction.jinja2  opensearch.jinja2  robots.txt  single_page_app.jinja2  stats.jinja2  technical.jinja2
diamm/templatetags/: aboutpages_list.py  contribution_sort.py  flatpage_about.py  flatpage_delete.py  latest_news.py  latest_news_block.py  markdown.py  menu.py  paginator.py  publication_block.py  recent_sources_block.py  statistics.py
diamm/tests/: test_foo.py
diamm/views/: auth.py  contribution.py  home.py  login.html  user.py
diva/diva.js/: AUTHORS  index.html  package-lock.json  package.json  rsbuild.config.mjs  tsconfig.json  webpack.config.js
resources/: diamm-erd.graphml  iiif_manifest.py  image_dimensions_csv.py
search-app/: .swcrc  elm.json  optimize.sh  package.json
search-app/review/: elm.json
search-app/src/: Config.elm  Error.elm  Facets.elm  Helpers.elm  Main.elm  Model.elm  Msg.elm  Ports.elm  RecordTypes.elm  Request.elm  Results.elm  Route.elm  Style.elm  Update.elm  Views.elm
solr/: core.properties
solr/conf/: schema.xml  schema.xml.backup  schema.xml.orig  solrconfig.xml  solrconfig.xml.bak  synonyms.txt
(+701 files in other folders)
