[project]
name = "diamm"
version = "1.11.1"
description = ""
authors = [{ name = "Andrew Hankinson", email = "andrew.hankinson@gmail.com" }]
requires-python = ">=3.13,<4.0"
dependencies = [
    "django (>=5.0,<6.0)",
    "wagtail (>=6.0,<7.0)",
    "djangorestframework (>=3.11.0,<4.0.0)",
    "django-extensions (>=3.0,<4.0)",
    "django-registration (>=5.0,<6.0)",
    "jinja2 (>=3.0,<4.0)",
    "django-jinja (>=2.6.0,<3.0.0)",
    "pysolr @ git+https://github.com/django-haystack/pysolr/@master",
    "django-pagedown (>=2.0.3,<3.0.0)",
    "django-reversion (>=5.0,<6.0)",
    "ujson (>=5.0,<6.0)",
    "markdown2 (>=2.3.8,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "blessings (>=1.7,<2.0)",
    "ipython (>=9,<10)",
    "tablib (>=3.5.0,<4.0.0)",
    "requests (==2.32.3)",
    "traitlets (>=5.14.3,<6.0.0)",
    "Pillow (>=11.0,<12.0)",
    "markupsafe (>=3.0.1,<4.0.0)",
    "werkzeug (>=3.0.3,<4.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "psycopg[pool] (>=3.2.6,<4.0.0)",
    "sentry-sdk[django]>=2.41.0",
    "ypres",
]
package-mode = false

[dependency-groups]
dev = [
    "django-debug-toolbar>=5.1.0,<6",
    "django-stubs>=5.1.2,<6",
    "pydot>=3.0.4,<4",
    "mypy>=1.15.0,<2",
]

[tool.uv]
package = false

[tool.uv.sources]
ypres = { git = "https://github.com/rism-digital/ypres.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # pycodestyle warnings
    "W",
    # Pyflakes
    "F",
    # pyupgrade
    ## Flake8 plugins
    "UP",
    # flake8-bugbear
    "B",
    # flake8-comprehensions
    "C",
    # flake8-django
    "DJ",
    # flake8-bandit
    "S",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    # Ignore Pycodestyle line-length warnings, (mainly long comments).
    "E501",
    # Ignore McCabe complexity (for now).
    "C901",
    # Allow nullable Django fields
    "DJ001",
    # Don't check order of Django fields
    "DJ012",
    # Don't require a __str__ on models
    "DJ008",
]

[tool.ruff]
target-version = "py313"
exclude = [
    "diamm/tests",
    "resources",
    "diamm/management",
    "diamm/diamm_data/migrations",
    "diamm/diamm_site/migrations",
]
